@@ -1,5 +1,8 @@
 * What's new in version 3.0
 
+- Added support for private global variables and private functions. The scope
+  of these is limited to the tapset file they are defined in (PR19136).
+
 - New tapset function string_quoted() to quote and \-escape general strings.
   String $context variables that are pretty-printed are now processed with
   such a quotation engine, falling back to a 0x%x (hex pointer) on errors.
